Created attachment 120821 [details] selecting problem in different pdf reader Noto Sans CJK fonts in exported PDFs have abnormal Ascent and Descent values and cause problem when users want to select and copy. Please see: https://github.com/googlei18n/noto-cjk/issues/48 Steps to reproduce: 1. Open a Writer or Impress file 2. Set the font to Noto Sans CJK [JP/KR/TC] Regular 3. Write something 4. Export to PDF 5. Open the exported PDF with Evince/Sumatra/Firefox 6. Select some words Enviroment: LibreOffice: 5.0.3.2 OS: elementary OS 0.3.1 Freya (based Ubuntu 14.04)
I think kenlunde analyzed it better than I ever could have done, so setting to NEW.
Mark Hung committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=775d93d0c0dc902dab6e3bdb978501b5d6295f8b tdf#96091 Correct ascend and descend values for OTC font. It will be available in 5.2.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Created attachment 123538 [details] pdf created with 5.1.1.2 vs 5.2.0.0.alpha+ Hi, I've tried LO 5.2.0.0.alpha+ and the issue seems to be fixed, please see the new attachment. The selection box of Noto Sans CJK fonts is still a little bit higher than other fonts in PDF.js, such as PMingLiU or AR PL UMing. Nevertheless, it's much better now. Thanks for the great work. Environment: OS: elementary OS 0.3.2 Freya LibreOffice: 5.2.0.0.alpha0+ Build ID: 02de3a5206c7633d62ebc43edad37747e2c7a1de
@Mark Hung Sorry, I just found that LibO 5.4+ on Windows has this issue too, and probably on Mac OS X as well. Would you please help apply the patch to Windows and Mac OS ? Thank you !
Dear Hiunn-hué, This bug has been in RESOLVED FIXED status for more than 6 months. If the issue is still reproducible with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/, please report a new issue in https://bugs.documentfoundation.org/enter_bug.cgi providing, if needed, the steps and documents to reproduce it. Thanks for your understanding and collaboration. Closing as RESOLVED FIXED