tdf#96091 Correct ascend and descend values for OTC font.

CffSubsetterContext::emitAsType1() calculate ascend and descend
when emitting PDF font descriptor based on bounding box values.
However, values can come directly from hhea or OS2 table are
better for OTC font.

The order that determines which ascend and descend values are
used in PrintFontManager::analyzeTrueTypeFile() is changed
in order to make winAscend/winDescend and bounding box based
values the last choice.

Change-Id: I421f6af6a4bee01d23ccf3e8e65c8f6ad80922b6